--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "react-router-dom": "^6.8.1",
+    "sass": "^1.58.3",
     "vite": "^4.1.0"
   }
 }
